@@ -6,7 +6,7 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 
 # console uses PatternLayout.
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE}  [%-5p]  - %m%n
+log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE}  [%-5p] [%-10t] - %m%n
 
 log4j.logger.org.roosster.logging.VelocityLogSystem=WARN
 
