@@ -1,0 +1,13 @@
+# Set root logger level to DEBUG and its only appender to 'console'.
+log4j.rootLogger=INFO, console
+
+# console is set to be a ConsoleAppender.
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+
+# console uses PatternLayout.
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE}  [%-5p]  - %m%n
+
+log4j.logger.org.roosster.logging.VelocityLogSystem=WARN
+
+
