@@ -1,4 +1,4 @@
-output.mode=roossterxml
+output.mode=html
 
 output.html.class=org.roosster.output.modes.HtmlMode
 output.html.ctype=text/html
